Add favicon and manifest for PWA support
Added favicon and manifest for PWA support.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/icon-192.png">
+<link rel="apple-touch-icon" href="assets/icons/icon-192.png">
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#0f1115">
+
 <meta charset="UTF-8">
 <title>SK PLAY</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -240,3 +245,4 @@ footer {
 
 </body>
 </html>
+
